--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,18 +6,46 @@ edition = "2018"
 
 [dependencies]
 cortex-m = "0.6.4"
-panic-halt = "0.2.0"
 cortex-m-rt = "0.6.13"
 epd-waveshare = "0.4.0"
 embedded-graphics = "0.6.2"
 embedded-hal = "0.2.4"
-panic-itm = "0.4.2"
+defmt = "0.1.3"
+defmt-rtt = "0.1.0"
+panic-probe = { version = "0.1.0", features = ["print-defmt"] }
 
 [dependencies.stm32f4xx-hal]
 version = "0.8.3"
 features = ["stm32f401"]
 
+[features]
+# set logging levels here
+default = [
+  "defmt-default",
+  # "dependency-a/defmt-trace",
+]
+
+# do NOT modify these features
+defmt-default = []
+defmt-trace = []
+defmt-debug = []
+defmt-info = []
+defmt-warn = []
+defmt-error = []
+
+[profile.dev]
+codegen-units = 1
+debug = 2
+debug-assertions = true
+incremental = false
+opt-level = 3
+overflow-checks = true
+
 [profile.release]
 codegen-units = 1
-debug = true
-lto = true
+debug = 2
+debug-assertions = false
+incremental = false
+lto = 'fat'
+opt-level = 3
+overflow-checks = false
